MJ 20/07/05
- Refactored cdsim.Simulator so that it now only loads and executes
  controls, and calling the protocols is done by a control too. By default
  the old config files work. However, this modification makes it possible
  to totaly freely order the controls and the execution of a cycle, and
  (with the help of NextCycle) it is possible to run only a subset of the
  protocols, some controls in between and then some other subset. These
  features however will be used only for hacking...
- Removed the "simulation.shuffle" parameter, shuffling can now be
  added by the control cdsim.Shuffle. This way the time within the cycle and
  the schedule of the shuffling is as flexible as for any other control.

MJ 17/07/05
- Cleaned up the time issue and introduced CommonState.getIntTime for
  protocols that need timestamps but want to avoid longs (for performance
  resons). CDState.getCycle and CDState.getCycleT are used only when
  absolutely necessary. A good practice is to use CommonState methods
  only, to allow compatibility with the evend driven engine.
  More to come...

MJ 16/07/05
- added support for wrapping cycle driven protocol implementations into
  an event driven simulation. All calls to nextCycle are managed by a separate
  event and the "step" parameter of the scheduler for the protocol serves
  as the cycle length. It can be different for all protocols, and the
  way the consequtive cycles are scheduled can be changed by extending
  NextCycleEvent.
  More to come...

MJ 15/07/05
- some strong refactoring of the entire stuff.
  THIS UPDATE WILL MOST LIKELY BRAKE YOUR APPLICATIONS
  it is a first step towards a new release which will not be fully backwards
  compatible, and will go through a major cleanup and reorganization, something
  we should have done a long time ago...
  Some changes that have been made:
  - Make sure packages util, graph and config compile without the other